Header (banner) done

--- a/index.html
+++ b/index.html
@@ -5,12 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dev-Guide-A1</title>
 
+    <!-- google fonts (Azeret Mono) -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Azeret+Mono:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+
     <!-- external css file link -->
      <link rel="stylesheet" href="./css/style.css">
 
 </head>
 <body>
-    <header></header>
+    <header>
+        <section class="headerSection">
+            <img src="./assets/Group.png" alt="Header Image">
+            <h1>"In the near future, I hope to become a Developer."</h1>
+            <p>A career in web development involves creating and maintaining websites and web applications. It is a dynamic and rapidly evolving field with various specializations and opportunities.</p>
+            <a href="#"><button>Contact with me</button></a>
+        </section>
+    </header>
+    <!-- header (banner) ends -->
 
     <main>
         <h1>Assignment-01 testing</h1>
