Why Web Development section done

--- a/index.html
+++ b/index.html
@@ -26,7 +26,53 @@
     <!-- header (banner) ends -->
 
     <main>
-        <h1>Assignment-01 testing</h1>
+        <section class="webDevelopmentSection">
+            <article class="webDevelopmentSectionHeading">
+                <h1>Why Web Development?</h1>
+                <p>Web Development enables professionals to work across various industries, remotely or on-site, and provides a dynamic and fulfilling career path with significant growth potential.</p>
+            </article>
+            <!-- "why web development" heading ends -->
+
+            <section class="container webDevSection1">
+                <div class="contentDiv">
+                    <h2>I will Do Coding and Change The World</h2>
+                    <p>Coding can create solutions that have a profound and lasting impact on society.</p>
+                    <a href="#">Learn More</a>
+                </div>
+
+                <div class="imageDiv">
+                    <img src="./assets/Layer_1.png" alt="Layer One">
+                </div>
+            </section>
+            <!-- webDevSection1 ends -->
+
+            <section class="container webDevSection2">
+                <div class="contentDiv">
+                    <h2>I will Do Coding and Change The World</h2>
+                    <p>Coding can create solutions that have a profound and lasting impact on society.</p>
+                    <a href="#">Learn More</a>
+                </div>
+
+                <div class="imageDiv">
+                    <img src="./assets/Group3.png" alt="Layer One">
+                </div>
+            </section>
+            <!-- webDevSection2 ends -->
+
+            <section class="container webDevSection3">
+                <div class="contentDiv">
+                    <h2>I will Do Coding and Change The World</h2>
+                    <p>Coding can create solutions that have a profound and lasting impact on society.</p>
+                    <a href="#">Learn More</a>
+                </div>
+
+                <div class="imageDiv">
+                    <img src="./assets/Group4.png" alt="Layer One">
+                </div>
+            </section>
+            <!-- webDevSection3 ends -->
+        </section>
+        <!-- "why web development" section ends -->
     </main>
 
     <footer></footer>
