--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     <main>
         <section class="webDevelopmentSection">
-            <article class="webDevelopmentSectionHeading">
+            <article class="sectionHeading webDevelopmentSectionHeading">
                 <h1>Why Web Development?</h1>
                 <p>Web Development enables professionals to work across various industries, remotely or on-site, and provides a dynamic and fulfilling career path with significant growth potential.</p>
             </article>
@@ -73,8 +73,63 @@
             <!-- webDevSection3 ends -->
         </section>
         <!-- "why web development" section ends -->
+
+        <section class="currentTargetSection">
+            <article class="webDevelopmentSectionHeading">
+                <h1>Why Web Development?</h1>
+                <p>Web Development enables professionals to work across various industries, remotely or on-site, and provides a dynamic and fulfilling career path with significant growth potential.</p>
+            </article>
+            <!-- "current target" heading ends -->
+
+            <section class="items">
+                <div class="item html5">
+                    <img src="./assets/html.png" alt="">
+
+                    <div>
+                        <h2>HTML</h2>
+                        <p>HyperText Markup Language</p>
+                        <a href="#">Learn More</a>
+                    </div>
+                </div>
+                <!-- html5 item ends -->
+
+                <div class="item css3">
+                    <img src="./assets/css.png" alt="">
+
+                    <div>
+                        <h2>CSS</h2>
+                        <p>Cascading Style Sheets</p>
+                        <a href="#">Learn More</a>
+                    </div>
+                </div>
+                <!-- css3 item ends -->
+
+                <div class="item js">
+                    <img src="./assets/js.png" alt="">
+
+                    <div>
+                        <h2>JS</h2>
+                        <p>JavaScript is a high-level programming language</p>
+                        <a href="#">Learn More</a>
+                    </div>
+                </div>
+                <!-- js item ends -->
+            </section>
+            <!-- items ends -->
+        </section>
+        <!-- "current target" section ends -->
     </main>
 
-    <footer></footer>
+    <footer>
+        <section>
+            <h3>&copy; 2024 PHero B10 Assignment-1. All rights reserved.</h3>
+
+            <ul>
+                <li><a target="_blank" href="https://www.facebook.com/"><img src="./assets/facebook.png" alt=""></a></li>
+                <li><a target="_blank" href="https://github.com/"><img src="./assets/github.png" alt=""></a></li>
+                <li><a target="_blank" href="https://www.linkedin.com"><img src="./assets/linkedin-icon1.png" alt=""></a></li>
+            </ul>
+        </section>
+    </footer>
 </body>
 </html>
