Need Support done

--- a/index.html
+++ b/index.html
@@ -118,6 +118,20 @@
             <!-- items ends -->
         </section>
         <!-- "current target" section ends -->
+
+
+        <section class="needSupport">
+            <article class="needSupportHeading">
+                <h1>I Need Support</h1>
+                <p>Please, give us your important feedback. We'll try to fix our problems.</p>
+
+                <div class="suggestionDiv">
+                    <input type="text" id="inputField" class="inputField" placeholder="Suggest me any feedback for me" autocomplete="off">
+                    <button type="submit" class="suggestionBtn">Submit</button>
+                </div>
+            </article>
+        </section>
+        <!-- needSupport section ends -->
     </main>
 
     <footer>
@@ -131,5 +145,6 @@
             </ul>
         </section>
     </footer>
+    <!-- footer ends -->
 </body>
 </html>
