inspiration section done

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <img src="./assets/Group.png" alt="Header Image">
             <h1>"In the near future, I hope to become a Developer."</h1>
             <p>A career in web development involves creating and maintaining websites and web applications. It is a dynamic and rapidly evolving field with various specializations and opportunities.</p>
-            <a href="#"><button>Contact with me</button></a>
+            <a href="#footer"><button>Contact with me</button></a>
         </section>
     </header>
     <!-- header (banner) ends -->
@@ -37,7 +37,7 @@
                 <div class="contentDiv">
                     <h2>I will Do Coding and Change The World</h2>
                     <p>Coding can create solutions that have a profound and lasting impact on society.</p>
-                    <a href="#">Learn More</a>
+                    <a href="html5.html" target="_blank">Learn More</a>
                 </div>
 
                 <div class="imageDiv">
@@ -48,9 +48,9 @@
 
             <section class="container webDevSection2">
                 <div class="contentDiv">
-                    <h2>I will Do Coding and Change The World</h2>
+                    <h2>I will help People by creating Modern Web System</h2>
                     <p>Coding can create solutions that have a profound and lasting impact on society.</p>
-                    <a href="#">Learn More</a>
+                    <a target="_blank" href="/pages/css3.html">Learn More</a>
                 </div>
 
                 <div class="imageDiv">
@@ -63,7 +63,7 @@
                 <div class="contentDiv">
                     <h2>I will Do Coding and Change The World</h2>
                     <p>Coding can create solutions that have a profound and lasting impact on society.</p>
-                    <a href="#">Learn More</a>
+                    <a target="_blank" href="/pages/js.html">Learn More</a>
                 </div>
 
                 <div class="imageDiv">
@@ -73,6 +73,17 @@
             <!-- webDevSection3 ends -->
         </section>
         <!-- "why web development" section ends -->
+
+        <section class="inspirationSection">
+            <article class="sectionHeading inspirationSectionHeading">
+                <h2>My Inspiration</h2>
+                <p>Web development is a versatile and rewarding career path with numerous opportunities for specialization and advancement</p>
+            </article>
+            <!-- "why web development" heading ends -->
+
+            <iframe width="100%" height="450" src="https://www.youtube.com/embed/5O5e0nnVulY?si=7tSLjGQV2LqO7HDk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen id="iFrame"></iframe>
+        </section>
+        <!-- "inspirationSection" section ends -->
 
         <section class="currentTargetSection">
             <article class="webDevelopmentSectionHeading">
@@ -134,7 +145,7 @@
         <!-- needSupport section ends -->
     </main>
 
-    <footer>
+    <footer id="footer">
         <section>
             <h3>&copy; 2024 PHero B10 Assignment-1. All rights reserved.</h3>
 
