next target ends

--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
         </section>
         <!-- "why web development" section ends -->
 
+
         <section class="inspirationSection">
             <article class="sectionHeading inspirationSectionHeading">
                 <h2>My Inspiration</h2>
@@ -84,6 +85,7 @@
             <iframe width="100%" height="450" src="https://www.youtube.com/embed/5O5e0nnVulY?si=7tSLjGQV2LqO7HDk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen id="iFrame"></iframe>
         </section>
         <!-- "inspirationSection" section ends -->
+
 
         <section class="currentTargetSection">
             <article class="webDevelopmentSectionHeading">
@@ -129,6 +131,51 @@
             <!-- items ends -->
         </section>
         <!-- "current target" section ends -->
+
+
+        <section class="nextTargetSection">
+            <article class="nextTargetSectionHeading">
+                <h2>My Next Target</h2>
+                <p>I wanna be a MERN stack developer. For that, I've to learn something more & I'll to my best.</p>
+            </article>
+
+            <section class="targetContainer">
+                <div class="target react">
+                    <img src="./assets/react.png" alt="">
+
+                    <div>
+                        <h2>ReactJS</h2>
+                        <p>ReactJS is a popular JavaScript library developed by Facebook for building user interfaces, particularly single-page applications, by efficiently updating and rendering components as data changes</p>
+                        <a href="#">Learn more</a>
+                    </div>
+                </div>
+                <!-- react ends -->
+
+                <div class="target react">
+                    <img src="./assets/nodejs.png" alt="">
+
+                    <div>
+                        <h2>NodeJS</h2>
+                        <p>Node.js is a JavaScript runtime built on Chrome's V8 engine that allows developers to run JavaScript on the server side, enabling the creation of fast, scalable network applications</p>
+                        <a href="#">Learn more</a>
+                    </div>
+                </div>
+                <!-- node ends -->
+
+                <div class="target react">
+                    <img src="./assets/mongodb.png" alt="">
+
+                    <div>
+                        <h2>MongoDB</h2>
+                        <p>MongoDB is a NoSQL database that uses a document-oriented data model, storing data in flexible, JSON-like documents, making it suitable for scalable and high-performance applications</p>
+                        <a href="#">Learn more</a>
+                    </div>
+                </div>
+                <!-- mongodb ends -->
+            </section>
+            <!-- targetContainer ends -->
+        </section>
+        <!-- nextTargetSection section ends -->
 
 
         <section class="needSupport">
