--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <div class="contentDiv">
                     <h2>I will Do Coding and Change The World</h2>
                     <p>Coding can create solutions that have a profound and lasting impact on society.</p>
-                    <a href="html5.html" target="_blank">Learn More</a>
+                    <a href="#">Learn More</a>
                 </div>
 
                 <div class="imageDiv">
@@ -50,7 +50,7 @@
                 <div class="contentDiv">
                     <h2>I will help People by creating Modern Web System</h2>
                     <p>Coding can create solutions that have a profound and lasting impact on society.</p>
-                    <a target="_blank" href="/pages/css3.html">Learn More</a>
+                    <a href="#">Learn More</a>
                 </div>
 
                 <div class="imageDiv">
@@ -63,7 +63,7 @@
                 <div class="contentDiv">
                     <h2>I will Do Coding and Change The World</h2>
                     <p>Coding can create solutions that have a profound and lasting impact on society.</p>
-                    <a target="_blank" href="/pages/js.html">Learn More</a>
+                    <a href="#">Learn More</a>
                 </div>
 
                 <div class="imageDiv">
@@ -101,7 +101,7 @@
                     <div>
                         <h2>HTML</h2>
                         <p>HyperText Markup Language</p>
-                        <a href="#">Learn More</a>
+                        <a target="_blank" href="/pages/html5.html">Learn More</a>
                     </div>
                 </div>
                 <!-- html5 item ends -->
@@ -112,7 +112,7 @@
                     <div>
                         <h2>CSS</h2>
                         <p>Cascading Style Sheets</p>
-                        <a href="#">Learn More</a>
+                        <a target="_blank" href="pages/css3.html">Learn More</a>
                     </div>
                 </div>
                 <!-- css3 item ends -->
@@ -123,7 +123,7 @@
                     <div>
                         <h2>JS</h2>
                         <p>JavaScript is a high-level programming language</p>
-                        <a href="#">Learn More</a>
+                        <a target="_blank" href="/pages/js.html">Learn More</a>
                     </div>
                 </div>
                 <!-- js item ends -->
