anchor problem fix

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                     <div>
                         <h2>HTML</h2>
                         <p>HyperText Markup Language</p>
-                        <a target="_blank" href="/pages/html5.html">Learn More</a>
+                        <a target="_blank" href="pages/html5.html">Learn More</a>
                     </div>
                 </div>
                 <!-- html5 item ends -->
@@ -123,7 +123,7 @@
                     <div>
                         <h2>JS</h2>
                         <p>JavaScript is a high-level programming language</p>
-                        <a target="_blank" href="/pages/js.html">Learn More</a>
+                        <a target="_blank" href="pages/js.html">Learn More</a>
                     </div>
                 </div>
                 <!-- js item ends -->
