a tag replace by button

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <div class="contentDiv">
                     <h2>I will Do Coding and Change The World</h2>
                     <p>Coding can create solutions that have a profound and lasting impact on society.</p>
-                    <a href="#">Learn More</a>
+                    <button type="submit">Learn More</button>
                 </div>
 
                 <div class="imageDiv">
@@ -50,7 +50,7 @@
                 <div class="contentDiv">
                     <h2>I will help People by creating Modern Web System</h2>
                     <p>Coding can create solutions that have a profound and lasting impact on society.</p>
-                    <a href="#">Learn More</a>
+                    <button type="submit">Learn More</button>
                 </div>
 
                 <div class="imageDiv">
@@ -63,7 +63,7 @@
                 <div class="contentDiv">
                     <h2>I will Do Coding and Change The World</h2>
                     <p>Coding can create solutions that have a profound and lasting impact on society.</p>
-                    <a href="#">Learn More</a>
+                    <button type="submit">Learn More</button>
                 </div>
 
                 <div class="imageDiv">
@@ -101,7 +101,7 @@
                     <div>
                         <h2>HTML</h2>
                         <p>HyperText Markup Language</p>
-                        <a target="_blank" href="pages/html5.html">Learn More</a>
+                        <a target="_blank" href="https://www.w3schools.com/html/default.asp">Learn More</a>
                     </div>
                 </div>
                 <!-- html5 item ends -->
@@ -112,7 +112,7 @@
                     <div>
                         <h2>CSS</h2>
                         <p>Cascading Style Sheets</p>
-                        <a target="_blank" href="pages/css3.html">Learn More</a>
+                        <a target="_blank" href="https://www.w3schools.com/css/default.asp">Learn More</a>
                     </div>
                 </div>
                 <!-- css3 item ends -->
@@ -123,7 +123,7 @@
                     <div>
                         <h2>JS</h2>
                         <p>JavaScript is a high-level programming language</p>
-                        <a target="_blank" href="pages/js.html">Learn More</a>
+                        <a target="_blank" href="https://www.w3schools.com/js/default.asp">Learn More</a>
                     </div>
                 </div>
                 <!-- js item ends -->
@@ -146,7 +146,7 @@
                     <div>
                         <h2>ReactJS</h2>
                         <p>ReactJS is a popular JavaScript library developed by Facebook for building user interfaces, particularly single-page applications, by efficiently updating and rendering components as data changes</p>
-                        <a href="#">Learn more</a>
+                        <a target="_blank" href="https://www.w3schools.com/react/default.asp">Learn more</a>
                     </div>
                 </div>
                 <!-- react ends -->
@@ -157,7 +157,7 @@
                     <div>
                         <h2>NodeJS</h2>
                         <p>Node.js is a JavaScript runtime built on Chrome's V8 engine that allows developers to run JavaScript on the server side, enabling the creation of fast, scalable network applications</p>
-                        <a href="#">Learn more</a>
+                        <a target="_blank" href="https://www.w3schools.com/nodejs/default.asp">Learn more</a>
                     </div>
                 </div>
                 <!-- node ends -->
@@ -168,7 +168,7 @@
                     <div>
                         <h2>MongoDB</h2>
                         <p>MongoDB is a NoSQL database that uses a document-oriented data model, storing data in flexible, JSON-like documents, making it suitable for scalable and high-performance applications</p>
-                        <a href="#">Learn more</a>
+                        <a target="_blank" href="https://www.w3schools.com/mongodb/index.php">Learn more</a>
                     </div>
                 </div>
                 <!-- mongodb ends -->
