--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <div class="contentDiv">
                     <h2>I will Do Coding and Change The World</h2>
                     <p>Coding can create solutions that have a profound and lasting impact on society.</p>
-                    <button type="submit">Learn More</button>
+                    <button class="webDevBtn" type="submit">Learn More</button>
                 </div>
 
                 <div class="imageDiv">
@@ -50,7 +50,7 @@
                 <div class="contentDiv">
                     <h2>I will help People by creating Modern Web System</h2>
                     <p>Coding can create solutions that have a profound and lasting impact on society.</p>
-                    <button type="submit">Learn More</button>
+                    <button class="webDevBtn" type="submit">Learn More</button>
                 </div>
 
                 <div class="imageDiv">
@@ -63,7 +63,7 @@
                 <div class="contentDiv">
                     <h2>I will Do Coding and Change The World</h2>
                     <p>Coding can create solutions that have a profound and lasting impact on society.</p>
-                    <button type="submit">Learn More</button>
+                    <button class="webDevBtn" type="submit">Learn More</button>
                 </div>
 
                 <div class="imageDiv">
