--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,28 +9,33 @@
     <!-- google fonts (Azeret Mono) -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Azeret+Mono:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Azeret+Mono:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
 
     <!-- external css file link -->
-     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
 
 </head>
+
 <body>
-    <header>
-        <section class="headerSection">
-            <img src="./assets/Group.png" alt="Header Image">
-            <h1>"In the near future, I hope to become a Developer."</h1>
-            <p>A career in web development involves creating and maintaining websites and web applications. It is a dynamic and rapidly evolving field with various specializations and opportunities.</p>
-            <a href="#footer"><button>Contact with me</button></a>
-        </section>
-    </header>
-    <!-- header (banner) ends -->
 
     <main>
+        <section class="bannerContainer">
+            <div class="banner">
+                <img src="./assets/Group.png" alt="Header Image">
+                <h1>"In the near future, I hope to become a Developer."</h1>
+                <p>A career in web development involves creating and maintaining websites and web applications. It is a
+                    dynamic and rapidly evolving field with various specializations and opportunities.</p>
+                <a href="#footer"><button>Contact with me</button></a>
+            </div>
+        </section>
+        <!-- banner section ends -->
+
         <section class="webDevelopmentSection">
             <article class="sectionHeading webDevelopmentSectionHeading">
                 <h1>Why Web Development?</h1>
-                <p>Web Development enables professionals to work across various industries, remotely or on-site, and provides a dynamic and fulfilling career path with significant growth potential.</p>
+                <p>Web Development enables professionals to work across various industries, remotely or on-site, and
+                    provides a dynamic and fulfilling career path with significant growth potential.</p>
             </article>
             <!-- "why web development" heading ends -->
 
@@ -78,11 +84,15 @@
         <section class="inspirationSection">
             <article class="sectionHeading inspirationSectionHeading">
                 <h2>My Inspiration</h2>
-                <p>Web development is a versatile and rewarding career path with numerous opportunities for specialization and advancement</p>
+                <p>Web development is a versatile and rewarding career path with numerous opportunities for
+                    specialization and advancement</p>
             </article>
             <!-- "why web development" heading ends -->
 
-            <iframe width="100%" height="450" src="https://www.youtube.com/embed/5O5e0nnVulY?si=7tSLjGQV2LqO7HDk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen id="iFrame"></iframe>
+            <iframe width="100%" height="450" src="https://www.youtube.com/embed/5O5e0nnVulY?si=7tSLjGQV2LqO7HDk"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen id="iFrame"></iframe>
         </section>
         <!-- "inspirationSection" section ends -->
 
@@ -90,7 +100,8 @@
         <section class="currentTargetSection">
             <article class="webDevelopmentSectionHeading">
                 <h1>Why Web Development?</h1>
-                <p>Web Development enables professionals to work across various industries, remotely or on-site, and provides a dynamic and fulfilling career path with significant growth potential.</p>
+                <p>Web Development enables professionals to work across various industries, remotely or on-site, and
+                    provides a dynamic and fulfilling career path with significant growth potential.</p>
             </article>
             <!-- "current target" heading ends -->
 
@@ -145,7 +156,9 @@
 
                     <div>
                         <h2>ReactJS</h2>
-                        <p>ReactJS is a popular JavaScript library developed by Facebook for building user interfaces, particularly single-page applications, by efficiently updating and rendering components as data changes</p>
+                        <p>ReactJS is a popular JavaScript library developed by Facebook for building user interfaces,
+                            particularly single-page applications, by efficiently updating and rendering components as
+                            data changes</p>
                         <a target="_blank" href="https://www.w3schools.com/react/default.asp">Learn more</a>
                     </div>
                 </div>
@@ -156,7 +169,9 @@
 
                     <div>
                         <h2>NodeJS</h2>
-                        <p>Node.js is a JavaScript runtime built on Chrome's V8 engine that allows developers to run JavaScript on the server side, enabling the creation of fast, scalable network applications</p>
+                        <p>Node.js is a JavaScript runtime built on Chrome's V8 engine that allows developers to run
+                            JavaScript on the server side, enabling the creation of fast, scalable network applications
+                        </p>
                         <a target="_blank" href="https://www.w3schools.com/nodejs/default.asp">Learn more</a>
                     </div>
                 </div>
@@ -167,7 +182,9 @@
 
                     <div>
                         <h2>MongoDB</h2>
-                        <p>MongoDB is a NoSQL database that uses a document-oriented data model, storing data in flexible, JSON-like documents, making it suitable for scalable and high-performance applications</p>
+                        <p>MongoDB is a NoSQL database that uses a document-oriented data model, storing data in
+                            flexible, JSON-like documents, making it suitable for scalable and high-performance
+                            applications</p>
                         <a target="_blank" href="https://www.w3schools.com/mongodb/index.php">Learn more</a>
                     </div>
                 </div>
@@ -184,7 +201,8 @@
                 <p>Please, give us your important feedback. We'll try to fix our problems.</p>
 
                 <div class="suggestionDiv">
-                    <input type="text" id="inputField" class="inputField" placeholder="Suggest me any feedback for me" autocomplete="off">
+                    <input type="text" id="inputField" class="inputField" placeholder="Suggest me any feedback for me"
+                        autocomplete="off">
                     <button type="submit" class="suggestionBtn">Submit</button>
                 </div>
             </article>
@@ -197,12 +215,15 @@
             <h3>&copy; 2024 PHero B10 Assignment-1. All rights reserved.</h3>
 
             <ul>
-                <li><a target="_blank" href="https://www.facebook.com/"><img src="./assets/facebook.png" alt=""></a></li>
+                <li><a target="_blank" href="https://www.facebook.com/"><img src="./assets/facebook.png" alt=""></a>
+                </li>
                 <li><a target="_blank" href="https://github.com/"><img src="./assets/github.png" alt=""></a></li>
-                <li><a target="_blank" href="https://www.linkedin.com"><img src="./assets/linkedin-icon1.png" alt=""></a></li>
+                <li><a target="_blank" href="https://www.linkedin.com"><img src="./assets/linkedin-icon1.png"
+                            alt=""></a></li>
             </ul>
         </section>
     </footer>
     <!-- footer ends -->
 </body>
+
 </html>
