--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 
         <section class="currentTargetSection">
             <article class="webDevelopmentSectionHeading">
-                <h1>Why Web Development?</h1>
+                <h1>My Current Target</h1>
                 <p>Web Development enables professionals to work across various industries, remotely or on-site, and
                     provides a dynamic and fulfilling career path with significant growth potential.</p>
             </article>
